--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,50 +14,15 @@
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:migrate": "drizzle-kit migrate",
-    "eval": "npx tsx evals/run.ts $1",
-    "prepare": "relative-deps",
-    "test": "vitest",
-    "test:run": "vitest run",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
-    "test:memory": "vitest run packages/thegrid/src/tests/memory.test.ts",
-    "test:qdrant": "npx tsx src/scripts/test-qdrant-memory.ts",
-    "test:conversational": "npx tsx src/scripts/test-conversational-memory.ts",
-    "figma:help": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts help",
-    "figma:demo": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo",
-    "figma:demo:all": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo all",
-    "figma:demo:schema": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo schema",
-    "figma:demo:transformers": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo transformers",
-    "figma:demo:pipeline": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo pipeline",
-    "figma:demo:workflow": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo workflow",
-    "figma:demo:real-story": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo real-story",
-    "figma:analyze-real": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo analyze-real",
-    "figma:test-components": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo test-components",
-    "figma:test-page-detection": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo page-detection",
-    "figma:test-approval-flow": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo approval-flow",
-    "figma:test-storyblok": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo test-storyblok",
-    "figma:test-approval": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo test-approval",
-    "figma:test-no-uids": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts demo test-no-uids",
-    "figma:generate": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/cli-helper.ts generate",
-    "irf:example": "npx tsx src/services/AgentsFactories/FigmaToStoryblokAgent/IRF/example.ts"
+    "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
-    "@google/genai": "^0.7.0",
     "@hono/node-server": "^1.13.2",
+    "@hono/node-ws": "^1.1.7",
     "@hono/zod-validator": "^0.4.1",
-    "@mendable/firecrawl-js": "^1.22.0",
-    "@modelcontextprotocol/sdk": "^1.7.0",
-    "@mrck-labs/anton-sdk": "^1.3.0",
-    "@octokit/rest": "^21.0.2",
-    "@qdrant/js-client-rest": "^1.14.1",
-    "@qdrant/qdrant-js": "^1.14.1",
     "@types/pg": "^8.11.10",
-    "ai": "^4.0.13",
-    "autoevals": "^0.0.101",
     "axios": "^1.8.4",
-    "core.mrck.dev": "file:../thecore",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.1",
@@ -66,14 +31,13 @@
     "fluent-ffmpeg": "^2.1.3",
     "hono": "^4.6.4",
     "hono-pino": "^0.3.0",
-    "langfuse": "^3.30.3",
     "lowdb": "^7.0.1",
     "openai": "^4.96.0",
     "pg": "^8.13.1",
     "pino": "^9.5.0",
     "pino-pretty": "^11.3.0",
-    "storyblok-js-client": "^7.0.0",
     "uuid": "^9.0.0",
+    "ws": "^8.18.2",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.24.5"
   },
@@ -83,6 +47,7 @@
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^20.11.17",
     "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitest/coverage-v8": "^2.1.5",
