--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "firebase": "^11.9.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.484.0",
     "next": "14.1.3",
